# Matam

ex1/: date.c  date.h  event.c  event.h  event_manager.c  member.c  member.h
ex2/: eventManager.py  event_manager.i
ex3/: CMakeLists.txt  dry.cpp
ex3/partA/: date.c  date_wrap.cpp  date_wrap.h  exceptions.cpp  exceptions.h
ex3/partB/: base_event.cpp  base_event.h  closed_event.cpp  closed_event.h  custom_event.h  event_container.cpp  event_container.h  festival.cpp  festival.h  linked_list.h  node.h  one_time_event.h  open_event.cpp  open_event.h  ptr_vector.h  recurring_event.h
ex3/partC/: schedule.cpp  schedule.h
ex3/provided/: cmake
